--- a/www/package.json
+++ b/www/package.json
@@ -12,7 +12,9 @@
     "next": "15.0.3",
     "pretty-print-json": "^3.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.3.0",
+    "vexflow": "^4.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
