--- a/www/package.json
+++ b/www/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "next": "15.0.3",
     "pretty-print-json": "^3.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-tooltip": "^5.28.0",
     "tone": "^15.0.4",
     "vexflow": "^4.2.5"
   },
