--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,14 @@ wasm-bindgen = "0.2.84"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
-chordparser = "2.1.6"
+chordparser = "3.0.0"
 lazy_static = "1.5.0"
 serde = "1.0.214"
 serde-wasm-bindgen = "0.6.5"
 
 [dependencies.web-sys]
 version = "0.3.72"
-features = [
-  "console",
-]
+features = ["console"]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
