--- a/www/package.json
+++ b/www/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.3.0",
     "react-tooltip": "^5.28.0",
     "tone": "^15.0.4",
-    "vexflow": "^4.2.5"
+    "vexflow": "^4.2.5",
+    "chord_parser_demo": "file:../pkg"
   },
   "devDependencies": {
     "@types/node": "^20",
